--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "date-fns": "^2.30.0",
+    "firebase": "^10.7.1",
+    "jspdf": "^3.0.4",
+    "lucide-react": "^0.294.0",
     "react": "^18.2.0",
+    "react-calendar": "^4.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "firebase": "^10.7.1",
-    "date-fns": "^2.30.0",
-    "react-calendar": "^4.7.0",
-    "lucide-react": "^0.294.0"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -35,4 +37,3 @@
     "vite": "^5.0.8"
   }
 }
-
